src/style.less
/* ... */
.g-store-buy.g-upcoming-002 {
	.g-img-nav {
		
	}
	.g-img.g-img-slideshow-cont {
		// padding-bottom: calc(125% + 70px);
		// @media screen and (min-width: 600px) {
		// 	padding-bottom: calc(62% + 70px);	
		// }
	}

	// .g-meta {
	// 	padding: 20px 10px;

	// 	@media screen and (min-width: 600px) {
	// 		padding: 0;
	// 	}

	// }
}



// .g-buy, .g-shopping-cart-icon {
// 	display: none;
// }

.g-buy-sold-out {
	display: none;
}

.g-new-img {
	display: inline-block;
	    width: 42px;
	    vertical-align: middle;
	    margin-top: -9px;
	    margin-right: 2px;
}

.g-popup {
	position: fixed;
	top: 0;
	left: 0;
	z-index: 10;
	width: 100vw;
	height: 100vh;
	background: rgba(0,0,0,0.7);

	.g-popup-text {
		text-align: center;
		color: #fff;
		position: absolute;
		top: 20px;
		width: 100%;
		// font-weight: 700;1
		

		.g-popup-text-inner {
			background: #000;
			display: inline;
			padding: 5px 0 5px 10px;	
		}
	}

	.g-popup-inner {
		width: 100%;
		max-width: 800px;
		position: fixed;
		left: 50%;
		top: 50%;
		transform: translate(-50%, -50%);
	}

	img {
		width: 100%;
	}
}



/* code for shutdown */
// .g-shopping-cart, .g-shopping-cart-icon, .g-buy {
// 	display: none !important;
// }

.g-loader {

	&.g-hide {
		display: none;
	}

	.g-loader-inner {
		width: 100%;
		height: 100%;

		background: url('img/LKK-logo.webp');
		background-repeat: no-repeat;
		background-position: center;
		background-size: 30px;
		animation: 1s spinnow infinite linear;

		@-webkit-keyframes spinnow {
		    100% {
		        transform: rotate(360deg);
		        -webkit-transform: rotate(360deg);
		    }
		}

	}
	overflow: hidden;
	width: 100%;
	height: 50vh;
	min-height: 100px;
	

	
}


.g-mode-cont {
	display: flex;

	@media screen and (min-width: 600px) {
		display: none;
	}

	.g-mode-button {
		width: 50%;
		text-align: center;
		border-top: 1px solid #ececec;
		border-bottom: 1px solid #ececec;
		padding: 2px 0 3px 0;
		cursor: pointer;

		&:first-child {
			border-right: 1px solid #ececec;
		}

		svg {
			vertical-align: middle;
			width: 15px;
			fill: #999999;
		}

	}

	.g-mode-active {
		svg {
			stroke: #68a5d6;
			fill: #68a5d6;
		}
	}

}


.g-mobile-grid-mode {
	@media screen and (max-width: 600px) {

		.g-store-each {
			width: calc(33.333% - 3px);
			display: inline-block;
			margin-bottom: 0;
		}

		.g-img-dots, .g-meta, .g-img-nav {
			display: none;
		}
	}
}

